--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Unica+One&display=swap" rel="stylesheet">
     <title>The Lagoon</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="width:95%"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
